--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,32 +5,32 @@ import Image from "astro/components/Image.astro";
 import danceMotherFuckerDance from '../assets/images/dance-motherfucker-dance.jpg';
 const nyheder = await Astro.glob('./nyheder/*.md');
 const sorteredenyheder = nyheder.sort((a, b) => Date.parse(b.frontmatter.dato) - Date.parse(a.frontmatter.dato));
-const udvalgtenyheder = sorteredenyheder.slice(0, 3);
+const udvalgtenyheder = sorteredenyheder.slice(0, 4);
 ---
 <MainLayout title="Titel">
 	<article class="relative mb-16">
 		<Image src={danceMotherFuckerDance} alt="dance motherfucker dance" class=""/>
 		<div class="@container absolute top-0 left-1/4 w-1/2 ">
-			<h1 class="text-white text-[14cqw] mt-[22cqi]">Dance, motherfucker, dance!</h1>
+			<h1 class="text-persianmosaic-100 text-display text-[14cqw] mt-[22cqi]">Dance, motherfucker, dance!</h1>
 		</div>
 		
 	</article>
 
 	<div class="max-w-5xl mx-auto p-4">	
 		<section class="mb-16">
-			<h2 class="mb-8 text-4xl">Nyheder</h2>
+			<h2 class="mb-8 text-4xl text-persianmosaic-500">Nyheder</h2>
 			<!-- alt hvad der omhandler lists til nyheder -->
-			<ul>
+			<ul class="grid gap-5 ">
 				{udvalgtenyheder.map(post => 
-				<li class="">
-					<div class="">
-					<img src={post.frontmatter.coverimage} alt={post.frontmatter.coveralt} class="" />
+				<li class=" flex gap-2  border-4 border-persianmosaic-700">
+					<div class="basis-1/3">
+					<img src={post.frontmatter.coverimage} alt={post.frontmatter.coveralt} class="nyhedsingle" />
 					</div>
-					<div class="">
-						<h3><a href={post.url} class="">{post.frontmatter.title}</a></h3>
-						<span class="">{post.frontmatter.dato}</span>
+					<div class="basis-2/3 p-5">
+						<h3><a href={post.url} class="text-persianmosaic-500 text-2xl">{post.frontmatter.title}</a></h3>
+						<span class=" text-sm">{post.frontmatter.dato}</span>
 						<p>{post.frontmatter.kortversion}</p>
-						<a href={post.url} class="">Læs mere...</a>
+						<a href={post.url} class=" text-persianmosaic-600 underline">Læs mere...</a>
 					</div>
 				</li>
 				)}
@@ -39,38 +39,46 @@ const udvalgtenyheder = sorteredenyheder.slice(0, 3);
 		</section>
 
 		<section x-data="{ alledansehold: []}" x-init="alledansehold = await (await fetch('dansehold.json')).json(); alledansehold.reverse();" class="mb-16">
-			<h2 class="my-8 text-4xl">Dansehold Efterår 2024</h2>
+			<h2 class="my-8 text-4xl text-persianmosaic-500">Dansehold Efterår 2024</h2>
 			<!-- alt hvad der omhandler cards til dansehold -->
-			<section class="">
+			<section class="grid grid-cols-2 gap-8 ">
 				<template x-for="dansehold in alledansehold" :key="dansehold.id">	
-					<article class="">
+					<article class="border-4 border-persianmosaic-700 rounded-xl">
 						<a href="#">
-							<header class="">
+							<header class="relative ">
 								<img :src="dansehold.holdbillede" :alt="dansehold.hodlbilledealt" class="">
-								<div class="" x-show="">Nyt hold!</div>
-								<div class="" x-show="dansehold.rabat"><span x-text="dansehold.rabatsats"></span> rabat!</div>
-								<div class="" x-show="(dansehold.pladserpaaholdet - dansehold.antaldeltagere) < 5">Kun få pladser tilbage!</div>
+								<div class="absolute top-6 left-0 flex gap-2 bg-persianmosaic-800 text-persianmosaic-100 py-2 px-3" x-show=""> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m3.75 13.5 10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75Z" />
+</svg>
+ Nyt hold! </div>
+								<div class="absolute top-6 right-0 flex gap-2 bg-persianmosaic-200 text-persianmosaic-800 py-2 px-3" x-show="dansehold.rabat"><span class="order-2" x-text="dansehold.rabatsats"></span> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+</svg>
+ </div>
+								<div class="absolute bottom-6 right-0 flex gap-2 bg-persianmosaic-800 text-persianmosaic-100 py-2 px-3" x-show="(dansehold.pladserpaaholdet - dansehold.antaldeltagere) < 5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z" />
+</svg> Kun få pladser tilbage! </div>
 							</header>
-							<section class="">
-								<h3 class="" x-text="dansehold.holdnavn"></h3>
-								<div class="">
+							<section class="p-8">
+								<h3 class="my-8 text-4xl text-persianmosaic-500 font-display" x-text="dansehold.holdnavn"></h3>
+								<div class="grid grid-cols-2">
 									<div class="venstre">
-										<div><span>Tid: </span><span x-text="dansehold.tidspunkt"></span></div>
-										<div><span>Alder: </span><span x-text="dansehold.alder"></span></div>
-										<div><span>Niveau: </span><span x-text="dansehold.niveau"></span></div>
+										<div  class="text-persianmosaic-300 font-display" ><span>Tid: </span><span x-text="dansehold.tidspunkt"></span></div>
+										<div  class="text-persianmosaic-300 font-display"><span>Alder: </span><span x-text="dansehold.alder"></span></div>
+										<div  class="text-persianmosaic-300 font-display"><span>Niveau: </span><span x-text="dansehold.niveau"></span></div>
 									</div>
 									<div class="hoejre">
-										<div><span>Deltagere: </span><span x-text="dansehold.pladserpaaholdet"></span></div>
-										<div><span>Lokale: </span><span x-text="dansehold.lokale"></span></div>
+										<div  class="text-persianmosaic-300 font-display"><span>Deltagere: </span><span x-text="dansehold.pladserpaaholdet"></span></div>
+										<div  class="text-persianmosaic-300 font-display"><span>Lokale: </span><span x-text="dansehold.lokale"></span></div>
 									</div>
 								</div>
-								<p class="" x-text="dansehold.holdbeskrivelse"></p>	
+								<p class="pt-6" x-text="dansehold.holdbeskrivelse"></p>	
 							</section>
 							<hr />
-							<section class="">
-								<div class=""><img :src="dansehold.underviserfoto" :alt="dansehold.underviserfotoalt" class=""></div>
-								<div class="">
-									<p class="">Underviser: <span href="#" x-text=""></span></p>
+							<section class="flex p-5 gap-5">
+								<div class="object-cover basis-1/3 align-middle"><img :src="dansehold.underviserfoto" :alt="dansehold.underviserfotoalt" class="rounded-full object-cover h-32 w-32"></div>
+								<div class=" basis-2/3">
+									<p class="text-persianmosaic-300 font-display">Underviser: <span href="#" x-text=""></span></p>
 									<p x-text="dansehold.underviserinfo"></p>
 								</div>
 							</section>
