--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
+@layer base {
 }
 
-@layer components{
+@layer components {
+  .nyhedsingle img {
+    @apply max-h-screen;
+  }
 }
